# HelloQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build64.bat
CustomTitleBar/: CMakeLists.txt  CustomTitleBar.qrc  CustomTitleBar.rc  framelesswindow.cpp  framelesswindow.h  main.cpp  mainwindow.cpp  mainwindow.h
HelloOGL/: CMakeLists.txt  main.cpp
HelloOGL/resources/: app.icns  icon_make.sh
HelloQt/: CMakeLists.txt  build.sh  build64.bat
HelloQt/icon/: icon.icns  icon_make.sh
HelloQt/tests/: counter.h  main.cpp  test_qstring.cpp
HelloWidget/: CMakeLists.txt  build64.bat  mainwidget.cpp  mainwidget.h
MemoryLeak/: CMakeLists.txt  mainwidget.cpp  mainwidget.h
ModelView/: CMakeLists.txt  mycolorseldelegate.cpp  mycolorseldelegate.h  mytablemodel.cpp  mytablemodel.h  widget.cpp
UndoTest/: CMakeLists.txt  InsertCommand.cpp  InsertCommand.h  main.cpp  undotest.cpp  undotest.h  undotest.qrc  undotest.ui
WebView2Test/: CMakeLists.txt  QWebView2.cpp  QWebView2.h  main.cpp
tests/: test_signal.cpp
