cmake_minimum_required(VERSION 3.15)
set(TARGET_NAME HelloWidget)
project(${TARGET_NAME} VERSION 1.0.0 LANGUAGES CXX)

message("CMAKE_PROJECT_NAKE ${CMAKE_PROJECT_NAKE}")
message("PROJECT_NAKE ${PROJECT_NAKE}")

message("CMAKE_SOURCE_DIR ${CMAKE_SOURCE_DIR}")
message("CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}")
message("CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}")
message("PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}")
message("PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR}")

message("CMAKE_CURRENT_LIST_FILE ${CMAKE_CURRENT_LIST_FILE}")
message("CMAKE_CURRENT_LIST_LINE ${CMAKE_CURRENT_LIST_LINE}")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Qt6 COMPONENTS Core Gui Widgets LinguistTools REQUIRED)

file(GLOB SRC_FILES "*.h*" "*.c*" )
set(TS_FILE ${PROJECT_BINARY_DIR}/${TARGET_NAME}_zh_CN.ts)

qt6_create_translation(${TARGET_NAME}_QM_FILE
    ${SRC_FILES}
    ${TS_FILE}
)

add_executable(${TARGET_NAME} ${SRC_FILES} ${${TARGET_NAME}_QM_FILE})

target_link_libraries(${TARGET_NAME} Qt::Widgets)
if(WIN32)
    add_compile_options(/utf-8)
    set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
endif()
add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Qt::Core> $<TARGET_FILE_DIR:${TARGET_NAME}>
    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Qt::Gui> $<TARGET_FILE_DIR:${TARGET_NAME}>
    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Qt::Widgets> $<TARGET_FILE_DIR:${TARGET_NAME}>
)
